# zd-rf-node

bootloader/: CMakeLists.txt  bootloader.code-workspace  flash.c  main.c
bootloader/inc/: flash.h
bootloader/portable/STM32F030/: CMakeLists.txt
desktop/: ble_stack.py  start.py
